crates/oxc_css_parser/tests/recoverable/eof/bad-string-newline.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: unterminated string before line break
  ┌─ bad-string-newline.css:2:12
  │
2 │   content: "
  │            ^
